--- a/paper/3.0 capital.Rmd
+++ b/paper/3.0 capital.Rmd
@@ -1,40 +1,41 @@
----
-output:
-  pdf_document: default
-  html_document: default
----
 <!-- Here are some ideas to consider. As you think through this, it might take you in additional directions. -->
+
 <!-- That's perfectly fine.  -->
 
 <!-- Can the insurer buyer maintain a lower level of capital? -->
 
 <!-- Consider the various loss cases: -->
+
 <!-- 1) No loss -->
+
 <!-- 2) A loss that allows the firm to continue operations.  -->
+
 <!--   how does the cost of capital increase as you get closer to minimum capital -->
+
 <!--   and what happens if you drop below the minimum capital in terms of the cost to recapitalize -->
+
 <!-- 3) bankruptcy -->
+
 <!-- What happens with capital and return on capital in each of these cases? -->
 
 <!-- How does that volatility of the three situations above affect the return on capital demanded by investors? -->
 
-# Capital Considerations
+# Capital Relationships
 
-Here's the consideration for the above questions.
+We now consider the firm's capital. We present the development of the capital structure below:
 
-### 1.Can the insurer buyer maintain a lower level of capital?
+\begin{eqnarray}
+\text{Capital} &= \text{Assets} - \text{Liabilities}
+\text{Assets} &= \text{Fixed Assets} - \text{Current Assets}
+\end{eqnarray}
 
-Assets = Equity + Liabilities = Fixed Assets + Current Assets
+\text{Assets} = Capital + Liabilities (Is this correct? I changed "Equity" to "Capital")
 
-Capital = Equity + Debt = Fixed Assets + Net Working Capital(Current Assets- Current Liabilities)
+Assets = Fixed Assets + Current Assets
 
-Under no insurance case, Net Working Capital includes $C_w$ and Reserve set aside for potential claims event.
+Capital = Equity Capital + Debt Capital
 
-About S, in the notation description, it seems to represent the largest affordable loss amount, however, in the first formula of 2.1, it represents the amount set aside for potential claims event (which I thought is the reserve)
-
-So I want to use notation $Res$ to represent the Reserve to distinguish them.
-
-I am trying to explain my concept in the following plot.
+Capital = Fixed Assets + Net Working Capital (Current Assets Current Liabilities)
 
 ```{R, echo=FALSE, fig.height=3, fig.width=5}
 par(mar = c(1, 1, 1, 1))
@@ -48,8 +49,6 @@ rect(xleft = 1.6, ybottom = 0.3, xright = 2, ytop = 0.5)
 rect(xleft = 0.01, ybottom = 0.6, xright = 0.4, ytop = 0.8)
 rect(xleft = 0.3, ybottom = 0.9, xright = 2, ytop = 1.1)
 
-
-
 text(x = 1.1, y = 0.1, label = 'C', cex = 1)
 text(x = 0.3, y = 0.4, label = 'Fixed Assets', cex = 1)
 text(x = 1.1, y = 0.4, label = 'Cw', cex = 1)
@@ -59,83 +58,22 @@ text(x = 1.1, y = 1, label = 'S', cex = 1)
 
 ```
 
-Back to the question, 
-Insurance can protect losses, revenue is treated as fixed and known quantity, so the companies with insurance would not suffer from any unpredictable loss except the coverage has a upper limit.Therefore, the capital would not decrease to a low level under our assumption.
+### Can the insurer buyer maintain a lower level of capital?
+
+Under no insurance case, Net Working Capital includes $C_w$ and Reserve set aside for potential claims event.
+
+About S, in the notation description, it seems to represent the largest affordable loss amount, however, in the first formula of 2.1, it represents the amount set aside for potential claims event (which I thought is the reserve)
+
+So I want to use notation $Res$ to represent the Reserve to distinguish them.
+
+I am trying to explain my concept in the following plot.
+
+Back to the question, Insurance can protect losses, revenue is treated as fixed and known quantity, so the companies with insurance would not suffer from any unpredictable loss except the coverage has a upper limit.Therefore, the capital would not decrease to a low level under our assumption.
 
 Insurance can help company release more $C_w$, but can not change other capital requirement.
 
-
-
-
-### 2. Consider the various loss cases:
-First, in the notation, we use R to represent the Revenue for the product or service sold by the insured.
-I suggest using R to represent a return rate otherwise a quantity, since under the no insurance & with insurance cases, $C_w$ would be different, holding more working capital to operate would be a motivation to choose that strategy, using a return rate can better quantify.
-
-Then, I think the Capital Loss for companies will not be exactly the amount of loss, but also depend on the reserve and $C_w$ amount.
-
-I use notation $X_c$ to represent the Capital Loss
-
-I use notation $F_1$ to represent a penalty factor(>=1). This factor comes from the indirect loss when loss is over the reserve
-
-I use notation $F_2$ to represent a penalty factor(>=1). This factor comes from the illiquidity when loss reach the fixed assets
-
-The detail is in the following formula an I think it answers the question how does the cost of capital increase as you get closer to minimum capital
-\
-
-$$
-X_c=\left\{
-             \begin{array}{lr}
-             0 & X=0\\
-             X & 0< X\leq Res\\
-             Res+F_1\ (X-Res) , & Res< X\leq Res+C_w\\
-             Res+F_1\ (X-Res)+F_2\ (X-Res-C_w) , & Res< X\leq S\\
-             Bankrupt &X>S  
-             \end{array}
-\right.
-$$
-\
-The Capital would get both a F1 and F2 penalty when its loss is over (reserve + working capital), F1 and F2 are independent.
-Here an assumption is used to simplify the problem (the company would start to loss it fixed assets after losing all its working capital, which is not inconsistent with reality)
-
-
-After refining some concepts, $C_w=C-Res-Fixed\ Assets$
-
-We can use ROC(Return of capital) as a measurement for the return performance
-
-1 No loss
-
-$\Delta C=R-Z$, $ROC=\frac{R-Z}{C}$
-
-2 A loss that allows the firm to continue operations,what happens if you drop below the minimum capital in terms of the cost to recapitalize
-
-$\Delta C=R-Z-X_c$, $ROC=\frac{R-Z-X_c}{C}$
-
-If the excess loss happens, company's debt would increase rapidly. 
-There are the following 3 methods can help company overcome the high debt.
-
-1) Debt Restructuring\
-The debt restructuring process typically involves reducing the interest rates on loans, extending the dates when the company’s liabilities are due to be paid, or both. These steps improve the firm’s chances of paying back the obligations. Creditors understand that they would receive even less should the company be forced into bankruptcy or liquidation.
-Debt restructuring can be a win-win for both entities because the business avoids bankruptcy, and the lenders typically receive more than what they would through a bankruptcy proceeding.
-
-2) Reorganization\
-Federal bankruptcy laws govern how companies go out of business or recover from crippling debt.\
-Ch11/13 Reorganization\
-Ch7 Liquidate\
-The reorganization is not the real bankrupt. It allows companies to pay off their creditors and emerge from bankruptcy in a stronger position. It is more like a buffer before the liquidates to keep the company continue its day-to-day operation and try to become profitable again. 
-
-3) If the company’s debt situation is not so severe. There are several ways for companies to raise money.\
-1.If the company is a public company, it can issue stocks or bonds.\
-2.If the company is a nonpublic company, borrowing money from banks would be a more common way.\
-One thing to note, after a high layer loss, the company’s operation could be affected and have a more chance to bankrupt, its stock price would decrease, its bond rating may decrease (which means it needs to pay higher interest for the bonds issued), the bank may reject or charge a higher interest rate when lending money to you.
-
-
-
 ### 3. How does that volatility of the three situations above affect the return on capital demanded by investors?
 
-To measure the volatility, we can use $var(\Delta C)$ or use the delta ($\frac{d\Delta C}{dX}$).
-Obviously, under the insurance case, if the only variable is X and coverage has no upper limit, both these 2 measurements would be 0.
+To measure the volatility, we can use $var(\Delta C)$ or use the delta ($\frac{d\Delta C}{dX}$). Obviously, under the insurance case, if the only variable is X and coverage has no upper limit, both these 2 measurements would be 0.
 
-To connect the volatility and required return of capital, we can apply the efficient frontier. The efficient frontier is the set of optimal portfolios that offer the highest expected return for a defined level of risk or the lowest risk for a given level of expected return. 
-
-
-
+To connect the volatility and required return of capital, we can apply the efficient frontier. The efficient frontier is the set of optimal portfolios that offer the highest expected return for a defined level of risk or the lowest risk for a given level of expected return.
