Review of Email
specified a self-insurance concept

--- a/paper/4.0 Mearsuring Value.Rmd
+++ b/paper/4.0 Mearsuring Value.Rmd
@@ -52,11 +52,9 @@ In our review, we assume the following:
     mtext(text = 'Density', side = 2, line = 0.5, cex = 0.7)
     ```
 
--   The firm has an enterprise risk management (ERM)
-    strategy underlying its capital allocation. Its ERM strategy dictates that
-    it can
-    absorb a claim at the $p^{th}$ percentile of the distribution of $X$ which
-    we denote as $X_p$.
+-   The firm has an enterprise risk management (ERM) strategy underlying its
+    capital allocation. Its ERM strategy dictates that it can absorb a claim at
+    the $p^{th}$ percentile of the distribution of $X$ which we denote as $X_p$.
 
 -   The firm is able to generates a return on capital of $r_c$.
 
@@ -73,10 +71,13 @@ deploy capital, we compare rates of return both with and without insurance.
 ### Rate of Return without Insurance
 
 The firm's ERM strategy will require that it set aside a reserve in case it was
-to experience a capital depletion event that reduces. We denote this reserve as
-$C_x$, to indicate that the reserve is a seggregation of capital to absorb
-realizations of $X$ that reduce $C$ below $C_m$. We present that capital
-allocation approach in Figure X.
+to experience significant capital depletion. We denote this reserve as $C_x$, to
+indicate that the reserve is a segregation of capital to absorb realizations of
+$X$ that reduce $C$ below $C_m$. Effectively, the firm is insuring self-insuring
+this risk but, unlike an insurer, it can not spread that risk across its insured
+portfolio.
+
+We present that capital allocation approach in Figure X.
 
 ```{r No Insurnace, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 par(mar = c(1, 1, 1, 1))
